# launcher-next

./: .gitignore  AUTHORS  README.md  configure.ac
data/: Makefile.am
data/duck-launcher/: Makefile.am
data/duck-launcher/icons/: Makefile.am
data/duck-launcher/icons/default/: Makefile.am
data/duck-launcher/plugins/: Makefile.am
data/duck-launcher/plugins/files/: Makefile.am  index.html  plugin.py~
data/duck-launcher/plugins/plugins/: Makefile.am  manifest.json  plugin.py  plugin.py~  plugins.html
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
src/: Makefile.am  duck-launcher  duck-launcher.in  duck-launcher.in~  duck-plugins  duck-plugins.in  duck-settings  duck-settings.in  duck-settings~
src/duck/: Makefile.am  Makefile.am~  datadir.py  datadir.py.in  datadir.py.in~
src/duck/launcher/: Apps.py  Config.py  DockAppsOptions.py  Files.py  Main.py  Makefile.am  Plugins.py  System.py  Widgets.py  Window.py  XlibStuff.py  defaultConfig.py
src/duck/settings/: Main.py  Makefile.am  Pages.py  Widgets.py
