AC_INIT([duck-launcher], [0.69])

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.7])

AC_PREFIX_DEFAULT(/usr/local)
AC_CONFIG_FILES([Makefile 
                src/Makefile src/duck/Makefile 
                src/duck/launcher/Makefile 
                src/duck/settings/Makefile 
                data/Makefile 
                data/duck-launcher/icons/default/Makefile
                data/duck-launcher/plugins/files/Makefile
                data/duck-launcher/plugins/plugins/Makefile
                data/icons/hicolor/scalable/apps/Makefile ])

AC_OUTPUT