pkgdatadir= $(datadir)/@PACKAGE@/icons/default/
pkgdata_DATA = apps.svg \
    down.svg \
    file.svg \
    ham-button.svg \
    lock.svg \
    logout.svg \
    minimize.svg \
    move.svg \
    open.svg \
    remove.svg \
    restart.svg \
    settings.png \
    settings.svg \
    shutdown.svg \
    sleep.svg \
    star.svg \
    up.svg \
    user.svg \
    win.svg \
    settings-down.png \
    settings-down.svg \
    settings-up.png \
    settings-up.svg \
    settings-handle.svg \
    settings-plus.svg \
    settings-remove.svg